--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+/* @tailwind base; */
+/* @tailwind components; */
+@tailwindcss utilities;
 
 :root {
   --background: #ffffff;
